@@ -1,5 +1,8 @@
 2024-09-18  Oliver Kiddle  <opk@zsh.org>
 
+	* 53093: Src/input.c: silence compiler warning when USE_LSEEK
+	is not defined
+
 	* 53092: Src/init.c: silence deprecated header warning on Linux
 
 2024-09-14  Bart Schaefer  <schaefer@zsh.org>
